--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
+    "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-facebook-login": "^4.1.1",
     "react-facebook-login-lite": "^1.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
