--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
