--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "axios": "^1.7.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-facebook-login-lite": "^1.0.0",
     "react-icons": "^5.4.0",
