--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "moment-timezone": "^0.5.46",
